# game_engine_software

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  add_relevancy_to_game_engine_list.py  game_engine_table.js  index.html  pyproject.toml  script.js  update.py  update_game_engine_list.py  update_publication_lists.py  update_web_pages.py
.github/workflows/: linting.yml
data/: game_engine.db  game_engine_papers.db  game_engine_papers.db.bak
docs/: prisma.md
game_engine_software/: common.py
src/: script_engines.js  script_papers.js
static/: Anvil.html  Anvil.js  Construct.html  Construct.js  Delta3D.html  Delta3D.js  EGO.html  EGO.js  Enforce.html  Enforce.js  Frostbite.html  Frostbite.js  Java_3D.html  Java_3D.js  Jedi.html  Jedi.js  LyN.html  LyN.js  LÖVE.html  LÖVE.js  Marmalade.html  Panda3D.html  Panda3D.js  Pygame.html  Pygame.js  Q.html  Q.js  Roblox.html  Roblox.js  S&box.html  S&box.js  SAGE.html  SAGE.js  Scratch.html  Scratch.js  Source.html  Source.js  StepMania.html  StepMania.js  Stride.html  (+14 more)
