[project]
name = "game-engine-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
]
